objects/vlocity_ins__CustomFilterFormula__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The Vlocity Field Map Filter Formula custom setting defines one of potentially several formulas (or conditions) which make up a field map custom filter.</description>
    <fields>
        <fullName>vlocity_ins__DestinationSObjectType__c</fullName>
        <label>Destination SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SourceSObjectType__c</fullName>
        <label>Source SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Filter Formula</label>
</CustomObject>